# data-fortress

./: .gitignore  Cargo.toml  Makefile  README.md
dashboard/: app.py  requirements.txt
dashboard/pages/: 1_overview.py  2_duplicates.py  3_search.py  4_backup.py
dashboard/utils/: __init__.py  db.py  fortress.py
docs/: architecture.md  dashboard-architecture.yml
scripts/: build-release.sh  install.sh  run-dashboard.sh
src/: cli.rs  config.rs  db.rs  error.rs  main.rs  models.rs
src/backup/: mod.rs
src/dedup/: hasher.rs  mod.rs
src/organizer/: mod.rs
src/scanner/: classifier.rs  mod.rs
src/search/: exif.rs  extractor.rs  mod.rs
src/web/: mod.rs
templates/: backup.html  base.html  duplicates.html  overview.html  search.html  search_results.html
tests/: test_dedup.rs  test_scanner.rs
tests/fixtures/: sample.rs  sample.txt
